--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@reduxjs/toolkit": "^2.2.6",
     "antd": "^5.19.1",
     "axios": "^1.7.2",
+    "classnames": "^2.5.1",
     "html2canvas": "^1.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-query": "^3.39.3",
     "react-redux": "^9.1.2",
-    "react-webcam": "^7.2.0"
+    "react-webcam": "^7.2.0",
+    "sass": "^1.77.6"
   },
   "devDependencies": {
     "@types/node": "^20.14.10",
