--- a/package.json
+++ b/package.json
@@ -12,13 +12,18 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.16.0",
     "@mui/material": "^5.16.0",
     "@mui/x-data-grid": "^7.9.0",
     "@reduxjs/toolkit": "^2.2.6",
     "antd": "^5.19.1",
+    "antd-img-crop": "^4.22.0",
     "axios": "^1.7.2",
     "classnames": "^2.5.1",
+    "cloudinary": "^2.2.0",
     "html2canvas": "^1.4.1",
+    "i": "^0.3.7",
+    "npm": "^10.8.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-query": "^3.39.3",
