--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18.3.1",
     "react-query": "^3.39.3",
     "react-redux": "^9.1.2",
+    "react-toastify": "^10.0.5",
     "react-webcam": "^7.2.0",
     "sass": "^1.77.6"
   },
